k8s-files/kubernetes/examples/metadata-on-pods/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flask
  labels:
    app: flask
spec:
  type: NodePort
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30002
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: flask
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: flask
  replicas: 2 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: flask
    spec:
      affinity:
          podAntiAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                  - key: app
                    operator: In
                    values:
                    - flask
                topologyKey: kubernetes.io/hostname
      containers:
      - name: flask
        image: joudaon/flask-server:latest
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 0.1
            memory: 256Mi
          requests:
            cpu: 0.1
            memory: 256Mi
