k8s-files/kubernetes/examples/metadata-on-pods/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: ingress-flask-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /flask
        backend:
          serviceName: flask
          servicePort: 5000
